Software/QuickUsbLinuxDistrib/Samples/QuickUsbDiagQT/QuickUSB.h

extern QRETURN QuickUsbOpen(QHANDLE *hDevice, 
                            QCHAR *deviceName);
extern QRETURN QuickUsbClose(QHANDLE hDevice);
extern QRETURN QuickUsbReadSetting(QHANDLE hDevice, 
                                   QWORD address, 
                                   QWORD *value);
extern QRETURN QuickUsbWriteSetting(QHANDLE hDevice,
                                    QWORD address, 
                                    QWORD value);
extern QRETURN QuickUsbReadCommand(QHANDLE hDevice, 
                                   QWORD address, 
                                   QBYTE *data, 
                                   QWORD *length);
extern QRETURN QuickUsbWriteCommand(QHANDLE hDevice, 
                                    QWORD address, 
                                    QBYTE *data, 
                                    QWORD length);
extern QRETURN QuickUsbReadData(QHANDLE hDevice, 
                                QBYTE *data, 
                                QULONG *length);
extern QRETURN QuickUsbWriteData(QHANDLE hDevice, 
                                 QBYTE *data, 
                                 QULONG length);
extern QRETURN QuickUsbReadPortDir(QHANDLE hDevice, 
                                   QWORD address, 
                                   QBYTE *data);
extern QRETURN QuickUsbWritePortDir(QHANDLE hDevice, 
                                    QWORD address, 
                                    QBYTE data);
extern QRETURN QuickUsbReadPort(QHANDLE hDevice, 
                                QWORD address, 
                                QBYTE *data, 
                                QWORD *length);
extern QRETURN QuickUsbWritePort(QHANDLE hDevice, 
                                 QWORD address, 
                                 QBYTE *data, 
                                 QWORD length);
extern QRETURN QuickUsbSetRS232BaudRate(QHANDLE hDevice, 
                                        QULONG baudRate);
extern QRETURN QuickUsbGetNumRS232(QHANDLE hDevice, 
                                   QBYTE portNum, 
                                   QWORD *length);
extern QRETURN QuickUsbFlushRS232(QHANDLE hDevice, 
                                  QBYTE portNum);
extern QRETURN QuickUsbReadRS232(QHANDLE hDevice, 
                                 QBYTE portNum, 
                                 QBYTE *data, 
                                 QWORD *length);
extern QRETURN QuickUsbWriteRS232(QHANDLE hDevice, 
                                  QBYTE portNum, 
                                  QBYTE *data, 
                                  QWORD length);
extern QRETURN QuickUsbReadSpi(QHANDLE hDevice, 
                               QBYTE portNum,
                               QBYTE *data, 
                               QWORD *length);
extern QRETURN QuickUsbWriteSpi(QHANDLE hDevice, 
                                QBYTE portNum,
                                QBYTE *data, 
                                QWORD length);
extern QRETURN QuickUsbWriteReadSpi(QHANDLE hDevice, 
                                    QBYTE portNum, 
                                    QBYTE *data, 
                                    QWORD length);
extern QRETURN QuickUsbReadI2C(QHANDLE hDevice, 
                               QWORD address, 
                               QBYTE *data, 
                               QWORD *length);
extern QRETURN QuickUsbWriteI2C(QHANDLE hDevice, 
                                QWORD address, 
                                QBYTE *data,
                                QWORD length);
extern QRETURN QuickUsbSetTimeout(QHANDLE hDevice,
                                  QULONG timeOut);
extern QRETURN QuickUsbGetDriverVersion(QWORD * MajorDriverVersion,
                                        QWORD * MinorDriverVersion,
                                        QWORD * BuildDriverVersion);
extern QRETURN QuickUsbGetDllVersion(QWORD * MajorDllVersion,
                                     QWORD * MinorDllVersion,
                                     QWORD * BuildDllVersion);
extern QRETURN QuickUsbGetFirmwareVersion(QHANDLE hDevice, 
                                          QWORD * MajorFirmwareVersion,
                                          QWORD * MinorFirmwareVersion,
                                          QWORD * BuildFirmwareVersion);
extern QRETURN QuickUsbWriteDataAsync(QHANDLE hDevice, 
                                      QBYTE *data, 
                                      QULONG length, 
                                      QBYTE *transaction);
extern QRETURN QuickUsbReadDataAsync(QHANDLE hDevice, 
                                     QBYTE *data, 
                                     QULONG *length, 
                                     QBYTE *transaction);
extern QRETURN QuickUsbAsyncWait(QHANDLE hDevice, 
                                 QULONG *bytecount,
                                 QBYTE transaction,
                                 QBYTE immediate);